create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-rDXQIXlvP8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="cid-rDXQIXlvP8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -118,15 +118,15 @@
             <div class="accordion-content">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"><strong>Episodes Date!</strong></h2>
                 
-                <div id="bootstrap-accordion_14" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_4" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_14" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_4" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-7">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span><strong>&nbsp;Chat Blanc</strong></h4>
                                 </a>
                             </div>
-                            <div id="collapse1_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_14">
+                            <div id="collapse1_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_4">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">When Marinette makes a serious mistake, she has to face the consequences by fighting the last person she ever imagined would get akumatized.
 <br></p>
