--- a/epiosdeseng.html
+++ b/epiosdeseng.html
@@ -50,19 +50,19 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html">Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">ENG</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.co">FR<br></a><a class="text-black dropdown-item display-4" href="https://mobirise.co" aria-expanded="false">AR</a></div>
+                <li class="nav-item dropdown open">
+                    <a class="nav-link link text-black dropdown-toggle display-4" href="epiosdeseng.html" data-toggle="dropdown-submenu" aria-expanded="true">ENG</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.co">FR<br></a><a class="text-black dropdown-item display-4" href="https://mobirise.co" aria-expanded="false">AR</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Miraculous Crush</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><div class="container cid-rHmIgLAM84" id="custom-html-40" data-rv-view="901">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><div class="container cid-rHmIgLAM84" id="custom-html-40" data-rv-view="206">
     <div class="row">
         <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
-    </div><ul class="nav nav-tabs cid-rHmIgLAM84" id="custom-html-40" role="tablist" data-rv-view="901">
+    </div><ul class="nav nav-tabs cid-rHmIgLAM84" id="custom-html-40" role="tablist" data-rv-view="206">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
   </li>
@@ -72,7 +72,7 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
-</ul><div class="tab-content cid-rHmIgLAM84" id="custom-html-40" data-rv-view="901">
+</ul><div class="tab-content cid-rHmIgLAM84" id="custom-html-40" data-rv-view="206">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
       .bd-placeholder-img {
