--- a/page38.html
+++ b/page38.html
@@ -50,8 +50,8 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html">Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">ENG</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.co">FR<br></a><a class="text-black dropdown-item display-4" href="https://mobirise.co" aria-expanded="false">AR</a></div>
+                <li class="nav-item dropdown open">
+                    <a class="nav-link link text-black dropdown-toggle display-4" href="epiosdeseng.html" data-toggle="dropdown-submenu" aria-expanded="true">ENG</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.co">FR<br></a><a class="text-black dropdown-item display-4" href="https://mobirise.co" aria-expanded="false">AR</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Miraculous Crush</a></li></ul>
             
         </div>
@@ -59,7 +59,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
