--- a/epiosdeseng.html
+++ b/epiosdeseng.html
@@ -53,17 +53,17 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Full episodes</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="epiosdeseng.html">English Dub</a><a class="text-white dropdown-item display-4" href="episodesfr.html" aria-expanded="false">French Dub</a><a class="text-white dropdown-item display-4" href="episodesar.html" aria-expanded="false">Arabic Dub</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co" aria-expanded="true">Music</a></li></ul>
+                </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><div class="container cid-rHmIgLAM84" id="custom-html-40" data-rv-view="484">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><div class="container cid-rHmIgLAM84" id="custom-html-40" data-rv-view="277">
     <div class="row">
         <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
-    </div><ul class="nav nav-tabs cid-rHmIgLAM84" id="custom-html-40" role="tablist" data-rv-view="484">
+    </div><ul class="nav nav-tabs cid-rHmIgLAM84" id="custom-html-40" role="tablist" data-rv-view="277">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
   </li>
@@ -73,7 +73,7 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
-</ul><div class="tab-content cid-rHmIgLAM84" id="custom-html-40" data-rv-view="484">
+</ul><div class="tab-content cid-rHmIgLAM84" id="custom-html-40" data-rv-view="277">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
       .bd-placeholder-img {
