--- a/gamer2.0.ar.html
+++ b/gamer2.0.ar.html
@@ -53,13 +53,13 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Full episodes</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="epiosdeseng.html">English Dub</a><a class="text-white dropdown-item display-4" href="episodesfr.html" aria-expanded="false">French Dub</a><a class="text-white dropdown-item display-4" href="episodesar.html" aria-expanded="false">Arabic Dub</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co" aria-expanded="true">Music</a></li></ul>
+                </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section content4 cid-rMbwDLy72i" id="content4-ar">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content4 cid-rMbwDLy72i" id="content4-ar">
 
     
 
@@ -84,6 +84,8 @@
         </div>
     </figure>
 </section>
+
+<iframe frameborder="0" style="margin-left:12.5%;width:75%;height:50vh;" src="https://wayzzepisodes.github.io/episode.html?e=3|25&amp;lang=eng" class="cid-rPloIcT1eG" id="custom-html-b3" data-rv-view="447"></iframe>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
