--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/282919-128x72-1.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>home</title>
+  <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -53,13 +53,13 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Full episodes</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="epiosdeseng.html">English Dub</a><a class="text-white dropdown-item display-4" href="episodesfr.html" aria-expanded="false">French Dub</a><a class="text-white dropdown-item display-4" href="episodesar.html" aria-expanded="false">Arabic Dub</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co" aria-expanded="true">Music</a></li></ul>
+                </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-rMhNabzpyL mbr-fullscreen mbr-parallax-background" id="header2-aw">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="cid-rMhNabzpyL mbr-fullscreen mbr-parallax-background" id="header2-aw">
 
     
 
@@ -118,11 +118,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_4" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_6" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-5">New special episode</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">According to an interview with Thomas astruc, a special episode of 52 mins is going to air before season 4 premiere!&nbsp;</p>
                                     </div>
@@ -130,11 +130,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_4" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_6" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-5">Season 4 premiere</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Season 4 is going to air in Fall 2020</p>
                                     </div>
