--- a/page40.html
+++ b/page40.html
@@ -53,14 +53,14 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Full episodes</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="epiosdeseng.html">English Dub</a><a class="text-white dropdown-item display-4" href="episodesfr.html" aria-expanded="false">French Dub</a><a class="text-white dropdown-item display-4" href="episodesar.html" aria-expanded="false">Arabic Dub</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co" aria-expanded="true">Music</a></li></ul>
+                </li></ul>
             
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/c">web builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
