--- a/silencer.ar.html
+++ b/silencer.ar.html
@@ -53,13 +53,13 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Full episodes</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="epiosdeseng.html">English Dub</a><a class="text-white dropdown-item display-4" href="episodesfr.html" aria-expanded="false">French Dub</a><a class="text-white dropdown-item display-4" href="episodesar.html" aria-expanded="false">Arabic Dub</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co" aria-expanded="true">Music</a></li></ul>
+                </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content4 cid-rMbsnbXXO1" id="content4-a3">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section content4 cid-rMbsnbXXO1" id="content4-a3">
 
     
 
