create github pages

--- a/gamer2.0.ar.html
+++ b/gamer2.0.ar.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content4 cid-rMbwDLy72i" id="content4-ar">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content4 cid-rMbwDLy72i" id="content4-ar">
 
     
 
