create github pages

--- a/epiosdeseng.html
+++ b/epiosdeseng.html
@@ -60,11 +60,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><div class="container cid-rHmIgLAM84" id="custom-html-40" data-rv-view="1489">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><div class="container cid-rHmIgLAM84" id="custom-html-40" data-rv-view="2188">
     <div class="row">
         <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
-    </div><ul class="nav nav-tabs cid-rHmIgLAM84" id="custom-html-40" role="tablist" data-rv-view="1489">
+    </div><ul class="nav nav-tabs cid-rHmIgLAM84" id="custom-html-40" role="tablist" data-rv-view="2188">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
   </li>
@@ -74,7 +74,7 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
-</ul><div class="tab-content cid-rHmIgLAM84" id="custom-html-40" data-rv-view="1489">
+</ul><div class="tab-content cid-rHmIgLAM84" id="custom-html-40" data-rv-view="2188">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
       .bd-placeholder-img {
@@ -104,7 +104,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
             <a href="page15.html"><img src="assets/images/s1e01-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="page15.html">Stormy Weather</a></p>               
+              <p class="card-text"><a href="stormyweather.eng.html">Stormy Weather</a></p>               
               <div class="d-flex justify-content-between align-items-center">                 
                 <small class="text-muted">22 mins</small>
               </div>
@@ -115,7 +115,7 @@
           <div class="card shadow-sm mb-4 bg-white rounded">
             <img src="assets/images/s1e02-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true">
             <div class="card-body">
-              <p class="card-text">The Bubbler</p>
+              <p class="card-text"><a href="thebubbler.eng.html">The Bubbler</a></p>
               <div class="d-flex justify-content-between align-items-center">
                  <small class="text-muted">22 mins</small>
               </div>
@@ -126,7 +126,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
              <img src="assets/images/s1e03-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true">
             <div class="card-body">
-              <p class="card-text">The Pharaoh</p>
+              <p class="card-text"><a href="thepharaoh.eng.html">The Pharaoh</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
               </div>
@@ -138,7 +138,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
             <img src="assets/images/s1e04-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true">
             <div class="card-body">
-              <p class="card-text">Lady Wifi</p>
+              <p class="card-text"><a href="ladywifi.eng.html">Lady Wifi</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
               </div>
@@ -149,7 +149,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
              <img src="assets/images/s1e05-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true">
             <div class="card-body">
-              <p class="card-text">Timebreaker</p>
+              <p class="card-text"><a href="timebreaker.eng.html">Timebreaker</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
               </div>
@@ -160,7 +160,7 @@
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
             <img src="assets/images/s1e06-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true">
             <div class="card-body">
-              <p class="card-text">Mr. Pigeon</p>
+              <p class="card-text"><a href="mrpigeon.eng.html">Mr. Pigeon</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
               </div>
