--- a/episodesfr.html
+++ b/episodesfr.html
@@ -60,11 +60,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><div class="container cid-rHJXlhz8SM" id="custom-html-4m" data-rv-view="1457">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><div class="container cid-rHJXlhz8SM" id="custom-html-4m" data-rv-view="2156">
     <div class="row">
         <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
-    </div><ul class="nav nav-tabs cid-rHJXlhz8SM" id="custom-html-4m" role="tablist" data-rv-view="1457">
+    </div><ul class="nav nav-tabs cid-rHJXlhz8SM" id="custom-html-4m" role="tablist" data-rv-view="2156">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
   </li>
@@ -74,7 +74,7 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
-</ul><div class="tab-content cid-rHJXlhz8SM" id="custom-html-4m" data-rv-view="1457">
+</ul><div class="tab-content cid-rHJXlhz8SM" id="custom-html-4m" data-rv-view="2156">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
       .bd-placeholder-img {
