--- a/animan.eng.html
+++ b/animan.eng.html
@@ -52,16 +52,16 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">English Dub</a></div>
+                <li class="nav-item dropdown open">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="stormyweather.eng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAxlegIeE" id="custom-html-2o" data-rv-view="844">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAxlegIeE" id="custom-html-2o" data-rv-view="1033">
   <h1><br><br><br><br>Animan</h1>
    <hr>
   <p>Season 1 Episode 16</p>
