--- a/copycat.eng.html
+++ b/copycat.eng.html
@@ -53,15 +53,15 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">English Dub</a></div>
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="stormyweather.eng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAw2oyd88" id="custom-html-2a" data-rv-view="823">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAw2oyd88" id="custom-html-2a" data-rv-view="1012">
   <h1><br><br><br><br><br>Copy Cat</h1>
    <hr>
   <p>Season 1 Episode 9</p>
