--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">English Dub</a></div>
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="stormyweather.eng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-rXAHzWcnCI mbr-fullscreen mbr-parallax-background" id="header2-39">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="cid-rXAHzWcnCI mbr-fullscreen mbr-parallax-background" id="header2-39">
 
     
 
