--- a/pixelator.eng.html
+++ b/pixelator.eng.html
@@ -53,15 +53,15 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">English Dub</a></div>
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="stormyweather.eng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXABPb05u2" id="custom-html-2v" data-rv-view="856">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXABPb05u2" id="custom-html-2v" data-rv-view="1045">
   <h1><br><br><br><br>Pixelator</h1>
    <hr>
   <p>Season 1 Episode 20</p>
