--- a/simonsays.eng.html
+++ b/simonsays.eng.html
@@ -53,15 +53,15 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
                 <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">English Dub</a></div>
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="stormyweather.eng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXADjY8iwp" id="custom-html-31" data-rv-view="865">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXADjY8iwp" id="custom-html-31" data-rv-view="1054">
   <h1><br><br><br><br>Simon Says</h1>
    <hr>
   <p>Season 1 Episode 23</p>
