--- a/volpina.eng.html
+++ b/volpina.eng.html
@@ -52,16 +52,16 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">English Dub</a></div>
+                <li class="nav-item dropdown open">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="stormyweather.eng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXADuDaVxH" id="custom-html-32" data-rv-view="868">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXADuDaVxH" id="custom-html-32" data-rv-view="1057">
   <h1><br><br><br><br>Volpina</h1>
    <hr>
   <p>Season 1 Episode 24</p>
