--- a/simonsays.eng.html
+++ b/simonsays.eng.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXADjY8iwp" id="custom-html-31" data-rv-view="607">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXADjY8iwp" id="custom-html-31" data-rv-view="861">
   <h1><br><br><br><br>Simon Says</h1>
    <hr>
   <p>Season 1 Episode 23</p>
